[edit docker-compose.yaml] add shm_size: 32gb

--- a/environments/gpu/docker-compose.yaml
+++ b/environments/gpu/docker-compose.yaml
@@ -19,3 +19,4 @@ services:
         - ../../:/home/challenger/ascender
     ports:
         - hoge:hoge # ←個々を株いらないようにしよう。特に同じユーザーネームのやつとはかぶらないように注意
+    shm_size: '32gb'
