edit parametors for "docker build command"

--- a/environments/Dockerfile
+++ b/environments/Dockerfile
@@ -1,12 +1,12 @@
 ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE}
 
-ARG PROJECT_NAME=ascender
-ARG USER_NAME=challenger
-ARG GROUP_NAME=challengers
+ARG PROJECT_NAME=ProjectCompbio
+ARG USER_NAME=user
+ARG GROUP_NAME=compbio
 ARG UID=1000
 ARG GID=1000
-ARG PYTHON_VERSION=3.10
+ARG PYTHON_VERSION=3.9
 ARG APPLICATION_DIRECTORY=/home/${USER_NAME}/${PROJECT_NAME}
 ARG RUN_POETRY_INSTALL_AT_BUILD_TIME="false"
 
