[README.md edit]for building command

--- a/environments/gpu/docker-compose.yaml
+++ b/environments/gpu/docker-compose.yaml
@@ -1,19 +1,19 @@
 version: "3.8"
 
 services:
-  {ココをユーザー名にしよう}: # ←ここを自分のユーザーネームにしよう
+  {あなたのユーザー名}: # ←ここを自分のユーザーネームにしよう
     runtime: nvidia
-    container_name: contanor
+    container_name: {あなたのユーザー名}
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
     build:
       args:
         - BASE_IMAGE=nvidia/cuda:11.0.3-devel-ubuntu20.04
         - PYTHON_VERSION=3.9     # python3のバージョンは個々で指定しましょう。3.9以降だとビルドできなさそう
-        - UID=${HOST_UID-1000}    # $ id -u $USER  # 通所のターミナルで出てきた数字を打ち込む
-        - GID=${HOST_GID-1000}    # $ id -g $USER  # 通所のターミナルで出てきた数字を打ち込む
         - USER_NAME
         - GROPU_NAME=compbio
+        - UID=${HOST_UID-1000}    # $ id -u $USER  # 通所のターミナルで出てきた数字を打ち込む
+        - GID=${HOST_GID-1000}    # $ id -g $USER  # 通所のターミナルで出てきた数字を打ち込む
       context: ../../
       dockerfile: environments/Dockerfile
     tty: true
