--- a/environments/gpu/docker-compose.yaml
+++ b/environments/gpu/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: "3.8"
 
 services:
-  yuki: # ←ここをあなたのユーザー名にしよう
+  {ココをユーザー名にしよう}: # ←ここを{自分のユーザー名}にしよう
     runtime: nvidia
-    container_name: yuki # ←ここをあなたのユーザー名にしよう
+    container_name: contanor # ←ここを{自分のユーザー名}にしよう
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
     build:
       args:
         - BASE_IMAGE=nvidia/cuda:11.0.3-devel-ubuntu20.04
-        - PYTHON_VERSION=3.9     # python3のバージョンは個々で指定しましょう。3.9以降だとビルドできなさそう
+        - PYTHON_VERSION=3.9     # python3のバージョンを指定しよう。
         - UID=${HOST_UID-1000}    # $ id -u $USER  # 通所のターミナルで出てきた数字を打ち込む
         - GID=${HOST_GID-1000}    # $ id -g $USER  # 通所のターミナルで出てきた数字を打ち込む
       context: ../../
@@ -18,5 +18,5 @@ services:
     volumes:
         - ../../:/home/user/ProjectCompbio
     ports:
-        - 9999:9999 # ←個々を株いらないようにしよう。特に同じユーザーネームのやつとはかぶらないように注意
+        - hoge:hoge # ←個々を被らないようにしよう。特に同じユーザーネームのやつとはかぶらないように注意
     shm_size: '32gb'
